--- a/vignettes/MulEA.Rmd
+++ b/vignettes/MulEA.Rmd
@@ -13,21 +13,16 @@ vignette: >
 knitr::opts_chunk$set(echo = TRUE, warning = TRUE, message = TRUE, error = FALSE)
 ```
 
-   Functional interpretation of the biological data typically involves identifying key genes, molecules, reactions or pathways by finding non-random changes between two or more conditions or phenotypes. Performing enrichment analysis on set of molecules selected from  differential omics analysis is a method of choice. Among many packages that can be applied for this task, only few could be applied either to multiple species, ontology types or providing an access to multiple statistics.
+   Functional interpretation of the biological data typically involves identifying key genes, molecules, reactions or pathways by finding non-random changes between two or more conditions or phenotypes and it is often followed by enrichment analysis on set of molecules selected from differential omics analysis. Among many packages that can be applied for this task, only few provide a support for multiple species, ontology types or include statistical tests beyond simple overrepresentation analysis.
    
-   MulEA is addressing this gap in addition providing improved way to calculate correction for multiple testing that assume partial dependence between ontology terms and in result limits number of correct associations falsely scored as insignificant. Besides the commonly applied tests, MulEA provides a unique permutation based, empirical false discovery rate correction of the p-values to substitute the too conservative Bonferroni and Benjamini-Hochberg procedures.
-
-   MulEA allows enrichment analysis using most popular gene and pathway ontologies (GO, KEGG, Reactome). In addition, one can test enrichment in genomic locations and in gene expression, protein domain, miRNA and transcription factors data bases, all created from publicly available resources and presented in standardized manner. Beyond genes or proteins, MulEA even allows working with basically any kind of data types, i.e. small molecules, chromosome region, enhancers, molecular interactions or any other information defined by the user.
-
-   To analyse the data MulEA provide multiple types of statistics in one tool, which allows the user to calculate over-representations using the hypergeometric test, and enrichment analyses of ranked input by the Kolmogorov-Smirnov test.
-
-   To conclude, MulEA is a comprehensive enrichment software that allows expansive analyses using diverse ontologies, statistical models and p-value correction procedures that can extend our understanding of the results of various high-throughput analyses and therefore expand our knowledge.
+   MulEA is addressing this gap by allowing enrichment analysis not only within most popular gene and pathway ontologies (GO, KEGG, Reactome) but also in gene expression, protein domain, miRNA and transcription factors data bases created from publicly available resources and presented in standardized manner. Beyond genes or proteins space, MulEA allows working with any kind of data types, i.e. small molecules, chromosome regions, enhancers, molecular interactions or any other information defined by the user as long as it is provided in GMT format (see below) and contain reasonably large amount of categories to test. To analyse the data MulEA provide multiple types of statistics in one tool including hypergeometric test for count based analysis (in contingency table), and analyses of ranked input by modified Kolmogorov-Smirnov test.
+   
+   In addition, MulEA features improved way to calculate correction for multiple testing that assume partial dependence between ontology terms. By calculating permutation based, empirical false discovery rate correction of the p-values it limits number of incorrectly picked categories falsely scored as significant (false positives) or insignificant (false negatives).
     
-Implemented features include:
+Implemented MulEA features include:
 
 - [Mulea Input Output Data Workflow](#mulea-input-output-data-workflow)
-    - [File](#file)
-    - [Data Frame](#data-frame)
+    - [Input Files](#File)
 - [Data Analysis](#data-analysis)
     - [Set Based Tests](#set-based-tests)
         - [Hypergeometric Test](#hypergeometric-test)
@@ -39,60 +34,57 @@ Implemented features include:
 - [Other](#other)
 
 
-
-
 ## Mulea Input Output Data Workflow
-There are two ways to work with data in MulEA; directly from GMT files or with properly formated data frames. Detailed instructions are in paragraphs below. Remember that before starting work with MulEA you have to load and attach a package:
+As a first step load the package:
+
 ```{r, results = 'asis'} 
 library(package="MulEA")
 ```
 
+There are two input types necessary to run the analysis: 1) knowledge base that defines space of categories and 2) a ranked list of elements to be tested. MulEA supports reading the knowledge base directly from GMT files or with properly formated data frames.
 
-### File
-The file which includes the ontology must be in GMT: Gene Matrix Transposed file format (*.gmt) ([format explanation](http://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29)). Example of the file is under MulEA installation directory in the extdata/ folder. To find the installation directory use `find.package("MulEA")` command.
+### Input Files
+MulEA expects knowledge base to be in Gene Matrix Transposed (GMT) file format (*.gmt). This is a three column tabular format used in one of the first implementations of ranked based test for gene set enrichment analysis and due to its simplicity it makes generation of knolwedge bases relatively straightforward ([format explanation](http://software.broadinstitute.org/cancer/software/gsea/wiki/index.php/Data_formats#GMT:_Gene_Matrix_Transposed_file_format_.28.2A.gmt.29)). Example of the GMT file is included in MulEA installation directory. 
 
-In order to read the GMT file as a dataframe use: `MulEA::readGmtFileAsDataFrame()`. Method requires(*) one argument `gmtFilePath`:
+In order to create data frame containing the knowledge base read the GMT file with `MulEA::readGmtFileAsDataFrame()` method. The method requires one parameter `gmtFilePath` to provide path to the file.
 
-- `gmtFilePath` - This is the path to the file, Example: `"R/MulEA/extdata/model.gmt"`
+`gmtFilePath` - path to the file. Example: `"R/MulEA/extdata/model.gmt"`
 
-The ontology is then read into the data frame, such:
 ```{r, results = 'asis'} 
+# Get path to the example file
 pathToModelGmtFile <- system.file(package="MulEA", "extdata", "model.gmt")
-modelDfFromFile <- MulEA::readGmtFileAsDataFrame(gmtFilePath = pathToModelGmtFile)
+
+# Read GMT
+KnowledgeBaseDf <- MulEA::readGmtFileAsDataFrame(gmtFilePath = pathToModelGmtFile)
 ```
+
 ```{r, results = 'asis', echo = FALSE} 
-knitr::kable(modelDfFromFile, caption = "Model Data Frame")
+knitr::kable(KnowledgeBaseDf, caption = "Model Data Frame")
 ```
 
-If you would like to save the data frame that represents the ontology of the GMT file, use: `MulEA::saveDataFrameAsGmtFile()`. You have to provide two arguments `modelDF`, `gmtFilePath`.
+This data frame meets the criteria requried by the package. Please follow the same structure and style to avoid pitfals such as incorrect recognition of knowledge base categories that might impact results quality. 
 
-- `modelDF` - ontology data frame which represents the GMT file.
-- `gmtFilePath` - Path to file where you want to save the ontology. Example: `"R/MulEA/extdata/savedModel.gmt"`
+```{r, results = 'markup', echo=TRUE} 
+str(KnowledgeBaseDf)
+```
+
+If you would like to save the knolwedge base as a GMT file, use: `MulEA::saveDataFrameAsGmtFile()` with two arguments `modelDF`, `gmtFilePath`.
+
+`modelDF` - ontology data frame which represents the GMT file.
+`gmtFilePath` - path to a new file in which the ontology will be saved. Example: `"R/MulEA/extdata/savedModel.gmt"`
 
 ```{r, eval=FALSE} 
    MulEA::saveDataFrameAsGmtFile(modelDF = modelDfFromFile, gmtFilePath = pathToModelGmtFile)  
 ```
 
 
-### Data Frame
-Data frame used in previous paragraph is the properly formatted data frame. You should use data frame in that format to be sure that results are proper and counting goes without any problems. Below is presented the structure of an data frame.
-
-```{r, results = 'markup', echo=TRUE} 
-modelDfFromFile <- MulEA::readGmtFileAsDataFrame(gmtFilePath = system.file(package="MulEA", "extdata", "model.gmt"))
-str(modelDfFromFile)
-```
-
-
-
-
 ## Data Analysis
-"Analysis of data is a process of inspecting, cleansing, transforming, and modeling data with the goal of discovering useful information, suggesting conclusions, and supporting decision-making.", [Wikipedia](https://en.wikipedia.org/wiki/Data_analysis). MulEA performs data analysis on data frames. We implemented three types of tests base on contingency tables, rankings and topology of data.
-
-
+MulEA implements three types of tests, based on contingency tables, rankings and network topology.
 
 ### Set Based Tests
-Hypothesis tests may be performed on data divided into sets. MulEA provides tests which are based on that sets of data. For now MulEA uses Hypergeometric test under `SetBasedTest` class. This class is highly configurable and open for us a possibility to adjust test's results by typical methods and newly presented permutation test.  
-Before we perform this tests, we have to prepare data in proper form. Below is full data input prepered on our example data. Example data are small, to show results for user in a fast way.  
+Set based tests are most commonly used in enrichment analysis tools. Counts of genes or other entities are collected in form of 2x2 contingency table with rows representing specific knowledge base category and genes in remaining categories and columns corresponding to set under study and remaining part of the background set. MulEA implements hypergeometric test as `SetBasedTest` class. This class is highly configurable and alows adjusting test's results by Benjamin-Hochberg and permutation tests.  
+
+In order to start performing this tests, we have to prepare data in proper form. Commands below all steps neecessary to prepere input data.  
 
 ```{r, results = 'asis', echo = TRUE} 
 modelDfFromFile <- MulEA::readGmtFileAsDataFrame(gmtFilePath = system.file(package="MulEA", "extdata", "model.gmt"))
@@ -106,13 +98,15 @@ dataFromExperimentPool <- unique(c(c("FBgn0033690", "FBgn0261618", "FBgn0004407"
 
 #### Hypergeometric Test  
 
-Basic usage of `SetBasedTest` class lokk like that:
+Basic usage of `SetBasedTest` class is presented as follows:
 
 ```{r, results = 'asis', echo = TRUE} 
 setBasedTest <- SetBasedTest(gmt = modelDfFromFile, testData = dataFromExperiment)
 setBasedTestRes <- MulEA::runTest(setBasedTest)
 ```
-In tests based on sets, Mulea will inform the user when tested data are outside of the model data by message presented above.
+
+In set-based test, Mulea will inform the user when tested data are not covered by selected knowledge base:
+
 ```{r, results = 'asis', echo = FALSE} 
 knitr::kable(setBasedTestRes, caption = "Set Based Test Result Data Frame")
 ```
